--- a/package.json
+++ b/package.json
@@ -1,7 +1,1 @@
-
-{ "type": "module",
-  "devDependencies": {
-    "chai": "^5.1.0",
-    "mocha": "^10.3.0"
-  }
-}
+{"type":"module","devDependencies":{"chai":"^5.1.0","mocha":"^10.3.0"},"dependencies":{"htmx":"^0.0.2"}}
